assets/styles/portfolio.css
/* FONT USED */
body {
	font-family: 'Roboto Slab', serif;
	position: relative;
}

/* FONTS STYLED */
.jumbotron h1 {
	font-weight: 700;
	font-size: 4em;
}

h2 {
	font-weight: 400;
	font-size: 2em;
	text-align: center;
	text-transform: uppercase;
}

h4 {
	text-transform: uppercase;
}

/* LOGO */
#logo {
	height: 40px;
	width: 35px;
}

/* STYLE NAVBAR/DROPDOWN */
.navbar {
	position: fixed;
	width: 100%;
	background-color: #0d2b3e;
	z-index: 99999;
}

.dropdown {
	position: relative;
	display: inline-block;
}

.dropdown-menu-show {
	display: block;
	position: absolute;
	width: 100%;
	overflow: auto;
}

/* STYLE PICTURE/INTRO */
.jumbotron {
	background: url('img/CliffsEdge.jpg');
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center;
	background-attachment: fixed;
	height: 1200px;
	color: white;
}

#header {
	padding-top: 3em;
	text-align: center;
}

/* STYLE ABOUT SECTION */
#about {
	min-height: 800px;
	padding-top: 5em;
	padding-bottom: 5em;
	margin-top: -35px;
	width: 100%;
	text-align: justify;
	line-height: 2em;
	background-color: #F2F4F5;
}

#about p {
	margin: 2em 0;
}

#about .container{
	max-width: 800px;
}

/* STYLE PORTFOLIO PROJECT GRID */
#portfolio {
	min-height: 600px;
	padding-bottom: 5em;
	padding-top: 5em;
	background: #B6BFC5;
}

.row {
	display: flex;
	flex-wrap: wrap;
}

.col-sm {
	flex: 33%;
	max-width: 30%;
	height: 200px;
	padding: 0 10px;
	position: relative;
	margin-top: 2em;
	margin-right: 1.6667%;
	margin-left: 1.6667%;
}

.col-sm img {
	position: absolute;
	width: 100%;
	height: 200px;
	object-fit: cover;
	border-radius: 10px;
}

/* SETUP OVERLAY */
.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 10px;
  right: 0;
  width: 100%;
  height: 200px;
  opacity: 0;
  transition: .5s ease;
  background-color: #0d2b3e;
  border-radius: 10px;
}

.col-sm:hover .overlay {
  opacity: 1;
}

.text {
  color: white;
  font-size: 20px;
  text-transform: uppercase;
  position: absolute;
  top: 20%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  text-align: center;
}

.subText {
  color: white;
  font-size: 16px;
  position: absolute;
  width: 95%;
  top: 65%;
  left: 45%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  text-align: center;
  list-style: none;
}

/* ADD SHADOW EFFECT UNDER PORTFOLIO PROJECTS */
.col-sm:hover .overlay{
	box-shadow:
	1px 1px 2px grey,
	2px 2px 4px grey,
	3px 3px 6px grey,
	4px 4px 8px grey,
	5px 5px 10px grey;
	-webkit-transform: translateX(-3px);
	transform: translateX(-3px);
	transition: .5s ease;
}

/* ADJUST SIZE OF PROJECT GRID BASED ON SCREEN RESOLUTION */
@media screen and (max-width: 1000px) {
	.col-sm {
		flex: 50%;
		max-width: 50%;
	}
}

@media screen and (max-width: 600px) {
	.col-sm {
		flex: 100%;
		max-width: 100%;
	}
}

/* STYLE CONTACT INTRO */
#contact {
	height: 400px;
	padding-top: 5em;
	background-color: #F2F4F5;
	text-align: center;
}

#contact .container:first-of-type {
	text-transform: uppercase;
}

#contact .container:first-of-type p {
	font-size: 0.75em;
	text-align: center;
	padding-bottom: 10px;
}

/* HORIZONTAL ROW */
hr {
	width: 75%;
    border: 0;
    height: 1px;
    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
}

/* LINE UP CONTACT INFO */
#contact div:nth-of-type(2) {
	display: inline-block;
	text-align: justify;
}
 #contact.contact {
 	margin-top: 10px;
 }

/* STYLE SOCIAL MEDIA ICONS */
.icons {
	float: left;
}

.fab {
	font-size: 2em;
	margin-right: 10px;
}

.fa-linkedin {
	color: #0077B5;
}

.fa-linkedin:hover {
	color: #0077B5;
	transform: skew(-10deg);
	transition-duration: 0.5s;
}

.fa-facebook-square {
	color: #3B5998;
}

.fa-facebook-square:hover {
	color: #3B5998;
	transform: skew(-10deg);
	transition-duration: 0.5s;
}

.fa-github {
	color: #333333;
}

.fa-github:hover {
	color: #333333;
	transform: skew(-10deg);
	transition-duration: 0.5s;
}

/* STYLE FOOTER */
#footer {
	text-align: right;
	padding: 20px 10px;
	background-color: #0d2b3e;
	color: white;
}

